--- a/po/fi.po
+++ b/po/fi.po
@@ -41,7 +41,7 @@ msgid "Add require"
 msgstr "Lisää nimiavaruus"
 
 #: components/editor/searchClassModal.html:25
-#: components/editor/searchPredicateModal.html:32
+#: components/editor/searchPredicateModal.html:33
 msgid "All models"
 msgstr "Kaikki kirjastot"
 
@@ -49,7 +49,7 @@ msgstr "Kaikki kirjastot"
 msgid "All references"
 msgstr "Kaikki sanastot"
 
-#: components/editor/searchPredicateModal.html:41
+#: components/editor/searchPredicateModal.html:42
 msgid "All types"
 msgstr "Kaikki tyypit"
 
@@ -85,14 +85,14 @@ msgstr "Ominaisuus"
 msgid "Attribute list"
 msgstr "Ominaisuudet"
 
-#: components/group/groupList.html:2
+#: components/index.html:5
 msgid "Browse"
 msgstr "Selaa"
 
 #: components/common/modalTemplate.html:16
 #: components/editor/searchClassModal.html:52
 #: components/editor/searchConceptModal.html:51
-#: components/editor/searchPredicateModal.html:71
+#: components/editor/searchPredicateModal.html:72
 #: components/group/addModelModal.html:25
 #: components/model/addConceptModal.html:27
 #: components/model/addRequireModal.html:31
@@ -157,7 +157,7 @@ msgstr "Käsitteitä ei voida hakea koska sanastoja ei ole määritelty"
 msgid "Confirm delete"
 msgstr "Poistamisen hyväksyntä"
 
-#: components/editor/searchPredicateModal.html:73
+#: components/editor/searchPredicateModal.html:74
 msgid "Create and use predicate"
 msgstr "Luo ominaisuus ja käytä"
 
@@ -281,13 +281,27 @@ msgstr "Ryhmä"
 msgid "Hide"
 msgstr "Piilota"
 
+#: translations/misc.html:66
+msgid "How content"
+msgstr ""
+"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac "
+"scelerisque orci. Cras vitae lacus in tellus porta convallis. Lorem ipsum "
+"dolor sit amet, consectetur adipiscing elit. Nulla sodales eget nisi sed "
+"finibus. Vivamus euismod efficitur semper. Ut non lorem ultricies, dictum "
+"nunc rhoncus, pretium nunc. Cras faucibus elementum turpis, eget ornare "
+"risus consequat vel."
+
+#: translations/misc.html:65
+msgid "How?"
+msgstr "Kuinka pääsen osallistumaan?"
+
 #: translations/misc.html:47
 msgid "Id"
 msgstr "Tunniste"
 
-#: components/index.html:3
-msgid "IOW header"
-msgstr "Otsikko tähän"
+#: components/index.html:18
+msgid "Interoperability method"
+msgstr "Yhteentoimivuusmenetelmä"
 
 #: translations/misc.html:51
 msgid "Is defined by"
@@ -387,7 +401,7 @@ msgstr "Nimiavaruudet"
 msgid "Save changes"
 msgstr "Tallenna muutokset"
 
-#: components/editor/searchPredicateModal.html:63
+#: components/editor/searchPredicateModal.html:64
 #: components/form/editableButtons.html:12
 #: components/model/addRequireModal.html:28
 msgid "Save failed"
@@ -405,11 +419,11 @@ msgstr "Hae luokkia"
 msgid "Search from concept database"
 msgstr "Hae sanastosta…"
 
-#: components/editor/searchPredicateModal.html:23
+#: components/editor/searchPredicateModal.html:24
 msgid "search predicate"
 msgstr "Hae ominaisuutta…"
 
-#: components/editor/searchPredicateModal.html:21
+#: components/editor/searchPredicateModal.html:22
 msgid "Search predicate info"
 msgstr ""
 "Haen ensin tarvitsemaasi ominaisuutta yhteentoimivuuden kuvauksista. Jos et "
@@ -483,7 +497,7 @@ msgstr "Käytä"
 msgid "Use class"
 msgstr "Käytä luokkaa"
 
-#: components/editor/searchPredicateModal.html:72
+#: components/editor/searchPredicateModal.html:73
 msgid "Use predicate"
 msgstr "Käytä ominaisuutta"
 
@@ -502,6 +516,48 @@ msgstr "Kohde"
 #: components/editor/selectionView.html:22
 msgid "Visualization"
 msgstr "Visualisointi"
+
+#: translations/misc.html:64
+msgid "What can I do content"
+msgstr ""
+"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac "
+"scelerisque orci. Cras vitae lacus in tellus porta convallis. Lorem ipsum "
+"dolor sit amet, consectetur adipiscing elit. Nulla sodales eget nisi sed "
+"finibus. Vivamus euismod efficitur semper. Ut non lorem ultricies, dictum "
+"nunc rhoncus, pretium nunc. Cras faucibus elementum turpis, eget ornare "
+"risus consequat vel."
+
+#: translations/misc.html:63
+msgid "What can I do?"
+msgstr "Mitä yhteensopivuuden välineistöllä voi tehdä?"
+
+#: translations/misc.html:60
+msgid "What is description content"
+msgstr ""
+"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac "
+"scelerisque orci. Cras vitae lacus in tellus porta convallis. Lorem ipsum "
+"dolor sit amet, consectetur adipiscing elit. Nulla sodales eget nisi sed "
+"finibus. Vivamus euismod efficitur semper. Ut non lorem ultricies, dictum "
+"nunc rhoncus, pretium nunc. Cras faucibus elementum turpis, eget ornare "
+"risus consequat vel."
+
+#: translations/misc.html:59
+msgid "What is description?"
+msgstr "Mitä ovat yhteentoimivuuden kuvaukset?"
+
+#: translations/misc.html:62
+msgid "What is method content"
+msgstr ""
+"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac "
+"scelerisque orci. Cras vitae lacus in tellus porta convallis. Lorem ipsum "
+"dolor sit amet, consectetur adipiscing elit. Nulla sodales eget nisi sed "
+"finibus. Vivamus euismod efficitur semper. Ut non lorem ultricies, dictum "
+"nunc rhoncus, pretium nunc. Cras faucibus elementum turpis, eget ornare "
+"risus consequat vel."
+
+#: translations/misc.html:61
+msgid "What is method?"
+msgstr "Mikä on yhteentoimivuusmenetelmä?"
 
 #: translations/attribute.html:6
 msgid "xsd:anyURI"
@@ -574,6 +630,18 @@ msgstr "XML"
 #: components/common/modalTemplate.html:15
 msgid "Yes"
 msgstr "Kyllä"
+
+#~ msgid "What?"
+#~ msgstr "Mitä?"
+
+#~ msgid "Where?"
+#~ msgstr "Missä?"
+
+#~ msgid "Who?"
+#~ msgstr "Kuka?"
+
+#~ msgid "IOW header"
+#~ msgstr "Otsikko tähän"
 
 #~ msgid "Superproperty"
 #~ msgstr "Yläkäsite"
