--- a/po/fi.po
+++ b/po/fi.po
@@ -290,6 +290,10 @@ msgstr "Englanniksi"
 msgid "Example"
 msgstr "Esimerkki"
 
+#: components/form/editable.html:10
+msgid "Existing id error"
+msgstr "Tunniste on jo käytössä"
+
 #: translations/misc.html:29
 msgid "fi"
 msgstr "Suomeksi"
@@ -331,6 +335,10 @@ msgstr "Tunniste"
 #: components/frontPage.html:5
 msgid "Interoperability method"
 msgstr "Yhteentoimivuusmenetelmä"
+
+#: components/form/editable.html:9
+msgid "Invalid curie error"
+msgstr "Virheellinen tunniste"
 
 #: translations/misc.html:52
 msgid "Is defined by"
@@ -433,6 +441,14 @@ msgstr "Sanastot"
 #: components/navigation/login-modal.html:15
 msgid "Register"
 msgstr "Luo tunnukset"
+
+#: components/form/editable.html:11
+msgid "Required error"
+msgstr "Pakollinen kenttä"
+
+#: components/form/editable.html:12
+msgid "Required localized error"
+msgstr "Täytyy olla määritelty vähintään yhdellä kielellä"
 
 #: components/model/requiresView.html:1
 msgid "Requires"
