--- a/po/fi.po
+++ b/po/fi.po
@@ -44,7 +44,8 @@ msgstr "Lisää nimiavaruus"
 msgid "Advanced search"
 msgstr "Tarkennettu haku"
 
-#: components/editor/searchClassModal.html:26 components/editor/searchPredicateModal.html:38
+#: components/editor/searchClassModal.html:26
+#: components/editor/searchPredicateModal.html:38
 msgid "All models"
 msgstr "Kaikki kirjastot"
 
@@ -100,11 +101,16 @@ msgstr "Attribuutit"
 msgid "Browse"
 msgstr "Selaa"
 
-#: components/advancedSearchModal.html:33 components/common/modalTemplate.html:16
-#: components/editor/addConceptModal.html:29 components/editor/searchClassModal.html:51
-#: components/editor/searchConceptModal.html:52 components/editor/searchPredicateModal.html:75
-#: components/group/addModelModal.html:20 components/model/addRequireModal.html:33
-#: components/model/searchRequireModal.html:34 components/model/searchSchemeModal.html:26
+#: components/advancedSearchModal.html:33
+#: components/common/modalTemplate.html:16
+#: components/editor/addConceptModal.html:29
+#: components/editor/searchClassModal.html:51
+#: components/editor/searchConceptModal.html:52
+#: components/editor/searchPredicateModal.html:75
+#: components/group/addModelModal.html:20
+#: components/model/addRequireModal.html:33
+#: components/model/searchRequireModal.html:34
+#: components/model/searchSchemeModal.html:26
 msgid "Cancel"
 msgstr "Peruuta"
 
@@ -143,8 +149,8 @@ msgstr "Luokat"
 #: components/editor/searchClassModal.html:14
 msgid "Class search info"
 msgstr ""
-"Hae ensin tarvitsemaasi luokkaa yhteentoimivuuden kuvauksista. Jos et löydä tarpeisiisi "
-"sopivaa, voit luoda uuden luokan."
+"Hae ensin tarvitsemaasi luokkaa yhteentoimivuuden kuvauksista. Jos et löydä "
+"tarpeisiisi sopivaa, voit luoda uuden luokan."
 
 #: components/editor/searchConceptModal.html:34
 msgid "Comment"
@@ -174,7 +180,8 @@ msgstr "Luo assosiaatio ja käytä"
 msgid "Create and use attribute"
 msgstr "Luo attribuutti ja käytä"
 
-#: components/editor/addConceptModal.html:30 components/group/addModelModal.html:21
+#: components/editor/addConceptModal.html:30
+#: components/group/addModelModal.html:21
 #: components/model/addRequireModal.html:34
 msgid "Create new"
 msgstr "Luo uusi"
@@ -275,6 +282,10 @@ msgstr "Käytöstä poistunut"
 msgid "Draft"
 msgstr "Luonnos"
 
+#: components/form/errorMessages.html:10
+msgid "Duplicate error"
+msgstr "Syöte on jo lisätty"
+
 #: components/form/editableEntityButtons.html:5
 msgid "Edit"
 msgstr "Muokkaa"
@@ -286,8 +297,8 @@ msgstr "Muokkaaminen on kesken"
 #: components/navigation/login-modal.html:5
 msgid "eDuuni information"
 msgstr ""
-"Palveluun kirjaudutaan eDuuni-tunnuksilla. Kirjautumista vaaditaan jos haluat muokata "
-"palvelun sisältöä."
+"Palveluun kirjaudutaan eDuuni-tunnuksilla. Kirjautumista vaaditaan jos "
+"haluat muokata palvelun sisältöä."
 
 #: translations/misc.html:34
 msgid "en"
@@ -340,10 +351,11 @@ msgstr "Piilota"
 #: translations/misc.html:71
 msgid "How content"
 msgstr ""
-"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac scelerisque orci. Cras "
-"vitae lacus in tellus porta convallis. Lorem ipsum dolor sit amet, consectetur adipiscing "
-"elit. Nulla sodales eget nisi sed finibus. Vivamus euismod efficitur semper. Ut non lorem "
-"ultricies, dictum nunc rhoncus, pretium nunc. Cras faucibus elementum turpis, eget ornare "
+"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac "
+"scelerisque orci. Cras vitae lacus in tellus porta convallis. Lorem ipsum "
+"dolor sit amet, consectetur adipiscing elit. Nulla sodales eget nisi sed "
+"finibus. Vivamus euismod efficitur semper. Ut non lorem ultricies, dictum "
+"nunc rhoncus, pretium nunc. Cras faucibus elementum turpis, eget ornare "
 "risus consequat vel."
 
 #: translations/misc.html:70
@@ -378,16 +390,16 @@ msgstr "Kirjasto"
 msgid "Label"
 msgstr "Nimi"
 
-#: components/navigation/login-modal.html:10 components/navigation/login-modal.html:2
-#: components/navigation/login.html:1
+#: components/navigation/login-modal.html:10
+#: components/navigation/login-modal.html:2 components/navigation/login.html:1
 msgid "Login"
 msgstr "Kirjaudu"
 
 #: components/navigation/login-modal.html:6
 msgid "Login information"
 msgstr ""
-"Alla olevalla painikkeella ohjaudut eDuuni-palvelun kirjautumiseen. Palaa sen jälkeen "
-"takaisin palveluun."
+"Alla olevalla painikkeella ohjaudut eDuuni-palvelun kirjautumiseen. Palaa "
+"sen jälkeen takaisin palveluun."
 
 #: components/navigation/login.html:11
 msgid "Logout"
@@ -497,7 +509,8 @@ msgstr "Täytyy olla määritelty vähintään yhdellä kielellä"
 msgid "Save changes"
 msgstr "Tallenna muutokset"
 
-#: components/editor/searchPredicateModal.html:67 components/form/editableEntityButtons.html:13
+#: components/editor/searchPredicateModal.html:67
+#: components/form/editableEntityButtons.html:13
 #: components/model/addRequireModal.html:30
 msgid "Save failed"
 msgstr "Tallentaminen epäonnistui"
@@ -549,8 +562,8 @@ msgstr "Hae sanastosta…"
 #: components/editor/searchPredicateModal.html:25
 msgid "Search predicate info"
 msgstr ""
-"Hae ensin tarvitsemaasi attribuuttia tai assosiaatiota yhteentoimivuuden kuvauksista. Jos et "
-"löydä tarpeisiisi sopivaa, voit luoda uuden ominaisuuden."
+"Hae ensin tarvitsemaasi attribuuttia tai assosiaatiota yhteentoimivuuden "
+"kuvauksista. Jos et löydä tarpeisiisi sopivaa, voit luoda uuden ominaisuuden."
 
 #: components/model/searchRequireModal.html:15
 msgid "search require"
@@ -639,10 +652,11 @@ msgstr "Visualisointi"
 #: translations/misc.html:69
 msgid "What can I do content"
 msgstr ""
-"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac scelerisque orci. Cras "
-"vitae lacus in tellus porta convallis. Lorem ipsum dolor sit amet, consectetur adipiscing "
-"elit. Nulla sodales eget nisi sed finibus. Vivamus euismod efficitur semper. Ut non lorem "
-"ultricies, dictum nunc rhoncus, pretium nunc. Cras faucibus elementum turpis, eget ornare "
+"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac "
+"scelerisque orci. Cras vitae lacus in tellus porta convallis. Lorem ipsum "
+"dolor sit amet, consectetur adipiscing elit. Nulla sodales eget nisi sed "
+"finibus. Vivamus euismod efficitur semper. Ut non lorem ultricies, dictum "
+"nunc rhoncus, pretium nunc. Cras faucibus elementum turpis, eget ornare "
 "risus consequat vel."
 
 #: translations/misc.html:68
@@ -652,10 +666,11 @@ msgstr "Mitä yhteensopivuuden välineistöllä voi tehdä?"
 #: translations/misc.html:65
 msgid "What is description content"
 msgstr ""
-"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac scelerisque orci. Cras "
-"vitae lacus in tellus porta convallis. Lorem ipsum dolor sit amet, consectetur adipiscing "
-"elit. Nulla sodales eget nisi sed finibus. Vivamus euismod efficitur semper. Ut non lorem "
-"ultricies, dictum nunc rhoncus, pretium nunc. Cras faucibus elementum turpis, eget ornare "
+"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac "
+"scelerisque orci. Cras vitae lacus in tellus porta convallis. Lorem ipsum "
+"dolor sit amet, consectetur adipiscing elit. Nulla sodales eget nisi sed "
+"finibus. Vivamus euismod efficitur semper. Ut non lorem ultricies, dictum "
+"nunc rhoncus, pretium nunc. Cras faucibus elementum turpis, eget ornare "
 "risus consequat vel."
 
 #: translations/misc.html:64
@@ -665,10 +680,11 @@ msgstr "Mitä ovat yhteentoimivuuden kuvaukset?"
 #: translations/misc.html:67
 msgid "What is method content"
 msgstr ""
-"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac scelerisque orci. Cras "
-"vitae lacus in tellus porta convallis. Lorem ipsum dolor sit amet, consectetur adipiscing "
-"elit. Nulla sodales eget nisi sed finibus. Vivamus euismod efficitur semper. Ut non lorem "
-"ultricies, dictum nunc rhoncus, pretium nunc. Cras faucibus elementum turpis, eget ornare "
+"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac "
+"scelerisque orci. Cras vitae lacus in tellus porta convallis. Lorem ipsum "
+"dolor sit amet, consectetur adipiscing elit. Nulla sodales eget nisi sed "
+"finibus. Vivamus euismod efficitur semper. Ut non lorem ultricies, dictum "
+"nunc rhoncus, pretium nunc. Cras faucibus elementum turpis, eget ornare "
 "risus consequat vel."
 
 #: translations/misc.html:66
@@ -833,8 +849,8 @@ msgstr "Kyllä"
 
 #~ msgid "eDuuni tietoa"
 #~ msgstr ""
-#~ "Palveluun kirjaudutaan eDuuni-tunnuksilla. Kirjautumista vaaditaan jos haluat muokata "
-#~ "palvelun sisältöä."
+#~ "Palveluun kirjaudutaan eDuuni-tunnuksilla. Kirjautumista vaaditaan jos "
+#~ "haluat muokata palvelun sisältöä."
 
 #~ msgid "Kirjaudu"
 #~ msgstr "Kirjaudu"
@@ -844,8 +860,8 @@ msgstr "Kyllä"
 
 #~ msgid "kirjautuminen tietoa"
 #~ msgstr ""
-#~ "Alla olevalla painikkeella ohjaudut eDuuni-palvelun kirjautumiseen. Palaa sen jälkeen "
-#~ "takaisin palveluun."
+#~ "Alla olevalla painikkeella ohjaudut eDuuni-palvelun kirjautumiseen. Palaa "
+#~ "sen jälkeen takaisin palveluun."
 
 #~ msgid "Luo tunnukset"
 #~ msgstr "Luo tunnukset"
