Restrict label length to 40 chars
Closes #199

--- a/po/fi.po
+++ b/po/fi.po
@@ -398,6 +398,10 @@ msgstr "Kirjasto"
 msgid "Label"
 msgstr "Nimi"
 
+#: components/form/errorMessages.html:12
+msgid "Length error"
+msgstr "Syöte on liian pitkä"
+
 #: components/navigation/login-modal.html:10
 #: components/navigation/login-modal.html:2 components/navigation/login.html:1
 msgid "Login"
