--- a/po/fi.po
+++ b/po/fi.po
@@ -408,12 +408,7 @@ msgstr "Piilota"
 #: translations/misc.html:71
 msgid "How content"
 msgstr ""
-"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac "
-"scelerisque orci. Cras vitae lacus in tellus porta convallis. Lorem ipsum "
-"dolor sit amet, consectetur adipiscing elit. Nulla sodales eget nisi sed "
-"finibus. Vivamus euismod efficitur semper. Ut non lorem ultricies, dictum "
-"nunc rhoncus, pretium nunc. Cras faucibus elementum turpis, eget ornare "
-"risus consequat vel."
+"Välineistössä julkaistut tietomääritykset ovat vapaasti selailtavissa. Huomaathan, että sisällöt ovat vielä kehitysvaiheen luonnoksia. Jatkossa sisältöjä tietokomponenttikirjastoihin tuottavat eri toimialojen sisällön asiantuntijat." 
 
 #: translations/misc.html:70
 msgid "How?"
@@ -783,12 +778,7 @@ msgstr "Visualisointi"
 #: translations/misc.html:69
 msgid "What can I do content"
 msgstr ""
-"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac "
-"scelerisque orci. Cras vitae lacus in tellus porta convallis. Lorem ipsum "
-"dolor sit amet, consectetur adipiscing elit. Nulla sodales eget nisi sed "
-"finibus. Vivamus euismod efficitur semper. Ut non lorem ultricies, dictum "
-"nunc rhoncus, pretium nunc. Cras faucibus elementum turpis, eget ornare "
-"risus consequat vel."
+"Yhteentoimivuuden välineistö on työkalu, jolla voidaan konkreettisesti hyödyntää tietoarkkitehtuurin määrityksiä operatiivisessa toiminnassa. Tietojärjestelmällä voidaan kehittää, dokumentoida ja avoimesti julkaista yhteiskäyttöiset ja uudelleen käytettävät tietokomponentit, sekä toteutuskohtaiset tietomääritykset (Soveltamisprofiilit). Välineistöllä julkaistavat tietomääritykset on hyödynnettävissä viestinvälitykseen (rajapintaratkaisut), tietokantarakenteeksi (tietovarannot) tai sovelluskehitykseen (tietojärjestelmät)."
 
 #: translations/misc.html:68
 msgid "What can I do?"
@@ -797,12 +787,7 @@ msgstr "Mitä yhteensopivuuden välineistöllä voi tehdä?"
 #: translations/misc.html:65
 msgid "What is description content"
 msgstr ""
-"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac "
-"scelerisque orci. Cras vitae lacus in tellus porta convallis. Lorem ipsum "
-"dolor sit amet, consectetur adipiscing elit. Nulla sodales eget nisi sed "
-"finibus. Vivamus euismod efficitur semper. Ut non lorem ultricies, dictum "
-"nunc rhoncus, pretium nunc. Cras faucibus elementum turpis, eget ornare "
-"risus consequat vel."
+"Yhteentoimivuuden kuvaukset ovat tietomäärityksiä, joiden avulla turvataan niin ihmis- kuin koneluettava semanttinen yhteentoimivuus sekä tietojärjestelmien vaatima tekninen yhteentoimivuus sähköisissä, tietointensiivisissä palveluprosesseissa. Yhteentoimivuuden kuvaukset muodostuvat sanastoissa kuvatuista käsitteistä, semantiikaltaan näihin käsitteisiin pohjautuvista yhteiskäyttöisistä tietomäärityksistä, eli tietokomponenteista sekä edelleen näiden käyttöä eri toteutuksissa tarkentavista soveltamisprofiileista.
 
 #: translations/misc.html:64
 msgid "What is description?"
@@ -811,12 +796,8 @@ msgstr "Mitä ovat yhteentoimivuuden kuvaukset?"
 #: translations/misc.html:67
 msgid "What is method content"
 msgstr ""
-"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac "
-"scelerisque orci. Cras vitae lacus in tellus porta convallis. Lorem ipsum "
-"dolor sit amet, consectetur adipiscing elit. Nulla sodales eget nisi sed "
-"finibus. Vivamus euismod efficitur semper. Ut non lorem ultricies, dictum "
-"nunc rhoncus, pretium nunc. Cras faucibus elementum turpis, eget ornare "
-"risus consequat vel."
+"Yhteentoimivuusmenetelmän avulla voidaan kuvata tietojärjestelmissä käytettävä tietosisältö ottamatta kantaa sovellusten tekniseen toteutukseen. Yhteentoimivuusmenetelmä yhdistää tietomallien, sanastojen ja koodistojen kehittämisen yhtenäiseksi kokonaisuudeksi. Menetelmän avulla varmistetaan, että yhteisten määritysten soveltaminen on systemaattista ja säilyttää tietojen semantiikan eri toteutuksissa, ja on siten eri toimijoiden yhtenäisesti ymmärrettävissä. "
+"Menetelmä pohjautuu kansainvälisten standardien soveltamiseen, voit lukea lisää yhteentoimivuusmenetelmästä ja välineistön kehittämisestä <a href='https://confluence.csc.fi/pages/viewpage.action?pageId=51893708'>täältä</a>."
 
 #: translations/misc.html:66
 msgid "What is method?"
