--- a/po/fi.po
+++ b/po/fi.po
@@ -73,6 +73,10 @@ msgstr "On jo lisätty"
 msgid "and create new"
 msgstr "ja luo uusi"
 
+#: components/group/group.html:41
+msgid "Application profiles"
+msgstr "Sovellusprofiilit"
+
 #: translations/misc.html:38
 msgid "Are you sure that you want to cancel edit?"
 msgstr "Oletko varma, että haluat keskeyttää muokkauksen?"
@@ -408,7 +412,12 @@ msgstr "Piilota"
 #: translations/misc.html:73
 msgid "How content"
 msgstr ""
-"Välineistössä julkaistut tietomääritykset ovat vapaasti selailtavissa. Huomaathan, että sisällöt ovat vielä kehitysvaiheen luonnoksia. Jatkossa sisältöjä tietokomponenttikirjastoihin tuottavat eri kohdealueiden asiantuntijat."
+"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac "
+"scelerisque orci. Cras vitae lacus in tellus porta convallis. Lorem ipsum "
+"dolor sit amet, consectetur adipiscing elit. Nulla sodales eget nisi sed "
+"finibus. Vivamus euismod efficitur semper. Ut non lorem ultricies, dictum "
+"nunc rhoncus, pretium nunc. Cras faucibus elementum turpis, eget ornare "
+"risus consequat vel."
 
 #: translations/misc.html:72
 msgid "How?"
@@ -786,7 +795,12 @@ msgstr "Visualisointi"
 #: translations/misc.html:71
 msgid "What can I do content"
 msgstr ""
-"Yhteentoimivuuden välineistö on työkalu, jolla voidaan konkreettisesti hyödyntää tietoarkkitehtuurin määrityksiä operatiivisessa toiminnassa. Tietojärjestelmällä voidaan kehittää, dokumentoida ja avoimesti julkaista yhteiskäyttöiset ja uudelleen käytettävät tietokomponentit, sekä toteutuskohtaiset tietomääritykset (Soveltamisprofiilit). Välineistöllä julkaistavat tietomääritykset on hyödynnettävissä viestinvälitykseen (rajapintaratkaisut), tietokantarakenteeksi (tietovarannot) tai sovelluskehitykseen (tietojärjestelmät)."
+"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac "
+"scelerisque orci. Cras vitae lacus in tellus porta convallis. Lorem ipsum "
+"dolor sit amet, consectetur adipiscing elit. Nulla sodales eget nisi sed "
+"finibus. Vivamus euismod efficitur semper. Ut non lorem ultricies, dictum "
+"nunc rhoncus, pretium nunc. Cras faucibus elementum turpis, eget ornare "
+"risus consequat vel."
 
 #: translations/misc.html:70
 msgid "What can I do?"
@@ -795,7 +809,12 @@ msgstr "Mitä yhteensopivuuden välineistöllä voi tehdä?"
 #: translations/misc.html:67
 msgid "What is description content"
 msgstr ""
-"Yhteentoimivuuden kuvaukset ovat tietomäärityksiä, joiden avulla turvataan niin ihmis- kuin koneluettava semanttinen yhteentoimivuus sekä tietojärjestelmien vaatima tekninen yhteentoimivuus sähköisissä, tietointensiivisissä palveluprosesseissa. Yhteentoimivuuden kuvaukset muodostuvat sanastoissa kuvatuista käsitteistä, semantiikaltaan näihin käsitteisiin pohjautuvista yhteiskäyttöisistä tietomäärityksistä, eli tietokomponenteista sekä edelleen näiden käyttöä eri toteutuksissa tarkentavista soveltamisprofiileista."
+"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac "
+"scelerisque orci. Cras vitae lacus in tellus porta convallis. Lorem ipsum "
+"dolor sit amet, consectetur adipiscing elit. Nulla sodales eget nisi sed "
+"finibus. Vivamus euismod efficitur semper. Ut non lorem ultricies, dictum "
+"nunc rhoncus, pretium nunc. Cras faucibus elementum turpis, eget ornare "
+"risus consequat vel."
 
 #: translations/misc.html:66
 msgid "What is description?"
@@ -804,8 +823,12 @@ msgstr "Mitä ovat yhteentoimivuuden kuvaukset?"
 #: translations/misc.html:69
 msgid "What is method content"
 msgstr ""
-"Yhteentoimivuusmenetelmän avulla voidaan kuvata tietojärjestelmissä käytettävä tietosisältö ottamatta kantaa sovellusten tekniseen toteutukseen. Yhteentoimivuusmenetelmä yhdistää tietomallien, sanastojen ja koodistojen kehittämisen yhtenäiseksi kokonaisuudeksi. Menetelmän avulla varmistetaan, että yhteisten määritysten soveltaminen on systemaattista ja säilyttää tietojen semantiikan eri toteutuksissa, ja on siten eri toimijoiden yhtenäisesti ymmärrettävissä. "
-"Menetelmä pohjautuu kansainvälisten standardien soveltamiseen, voit lukea lisää yhteentoimivuusmenetelmästä ja välineistön kehittämisestä <a href='https://confluence.csc.fi/pages/viewpage.action?pageId=51893708'>täältä.</a>"
+"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac "
+"scelerisque orci. Cras vitae lacus in tellus porta convallis. Lorem ipsum "
+"dolor sit amet, consectetur adipiscing elit. Nulla sodales eget nisi sed "
+"finibus. Vivamus euismod efficitur semper. Ut non lorem ultricies, dictum "
+"nunc rhoncus, pretium nunc. Cras faucibus elementum turpis, eget ornare "
+"risus consequat vel."
 
 #: translations/misc.html:68
 msgid "What is method?"
