--- a/po/fi.po
+++ b/po/fi.po
@@ -527,6 +527,10 @@ msgstr "Kirjasto"
 msgid "Label"
 msgstr "Nimi"
 
+#: translations/misc.html:135
+msgid "ld+json frame"
+msgstr "JSON-LD Frame"
+
 #: components/form/errorMessages.html:13
 msgid "Length error"
 msgstr "Syöte on liian pitkä"
@@ -642,7 +646,7 @@ msgstr "Attribuutti"
 msgid "owl:ObjectProperty"
 msgstr "Assosiaatio"
 
-#: translations/misc.html:135
+#: translations/misc.html:136
 msgid "Pattern"
 msgstr "Säännollinen lauseke"
 
